# Medio

./: .gitignore  AGENT.md  CLI_SCHEMA.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: medio.rb
src/: main.rs
src/ai/: embedding.rs  mod.rs  openai_compat.rs
src/cli/: args.rs  mod.rs  render.rs  report.rs
src/cli/commands/: analyze.rs  config.rs  dedup.rs  mod.rs  organize.rs  rename.rs  scan.rs  scrape.rs  tui.rs
src/core/: config.rs  context_infer.rs  hasher.rs  identifier.rs  keyword_filter.rs  mod.rs  oplog.rs  pipeline.rs  runtime.rs  scanner.rs  types.rs
src/db/: cache.rs
src/engine/: deduplicator.rs  execution_report.rs  mod.rs  nfo_writer.rs  organizer.rs  renamer.rs
src/media/: content_probe.rs  ffprobe.rs  mod.rs  native_probe.rs  probe.rs  suffix.rs
src/models/: media.rs
src/scraper/: image_scraper.rs  local.rs  mod.rs  musicbrainz.rs  openlibrary.rs  tmdb.rs
src/tui/: app.rs  event.rs  mod.rs  tree_view.rs  ui.rs
