[package]
name = "medio"
version = "0.1.0"
edition = "2024"
description = "Media file manager: rename, deduplicate, organize"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
ignore = "0.4"
twox-hash = "2"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
sled = "0.34"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg"] }
mp4parse = "0.17"
tera = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
trash = "5"
matroska-demuxer = "0.3"
async-trait = "0.1"
chrono = "0.4"
thiserror = "2"
once_cell = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
